fix: test types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,13 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
     "noUnusedParameters": false,
     "skipLibCheck": true,
     "sourceMap": true,
-    "target": "esnext",
+    "target": "es2019",
     "lib": ["dom", "es2019"],
     "rootDir": ".",
     "outDir": "lib",
