fix: remove cherry-pick lib

--- a/package.json
+++ b/package.json
@@ -89,7 +89,6 @@
     "@types/rimraf": "3.0.0",
     "@typescript-eslint/eslint-plugin": "4.20.0",
     "@typescript-eslint/parser": "4.20.0",
-    "cherry-pick": "0.5.0",
     "chokidar": "3.5.1",
     "conventional-changelog-angular-all": "1.7.0",
     "cpy": "8.1.2",
@@ -109,6 +108,7 @@
     "openapi-schema-validator": "7.2.3",
     "prettier": "2.2.1",
     "prettier-plugin-import-sort": "0.0.6",
+    "read-pkg-up": "^7.0.1",
     "rimraf": "3.0.2",
     "sort-package-json": "1.49.0",
     "ts-jest": "26.5.4",
