fix: pathItem's parameters field support

--- a/test/api.test.domain/index.yml
+++ b/test/api.test.domain/index.yml
@@ -380,3 +380,21 @@ paths:
                     type: array
                     items:
                       $ref: "./components/schemas/Item.yml"
+  /get/books/{id}:
+    parameters:
+      - name: id
+        in: path
+        required: true
+        description: Book ID
+        schema:
+          type: string
+          format: uuid
+    get:
+      operationId: getBookById
+      responses:
+        200:
+          description: "get books"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ObjectHasPropertiesType"
