fix: pathItem's parameters field support (#48)
* fix: pathItem's parameters field support
* fix: Support for parameter overwriting

--- a/test/api.test.domain/index.yml
+++ b/test/api.test.domain/index.yml
@@ -380,3 +380,42 @@ paths:
                     type: array
                     items:
                       $ref: "./components/schemas/Item.yml"
+  /get/books/{id}:
+    parameters:
+      - name: id
+        in: path
+        required: true
+        description: Book ID
+        schema:
+          type: string
+          format: uuid
+    get:
+      operationId: getBookById
+      responses:
+        200:
+          description: "get books"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ObjectHasPropertiesType"
+    delete:
+      operationId: deleteBook
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: Number Book ID
+          schema:
+            type: number
+            format: uuid
+      responses:
+        200:
+          description: "get books"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    enum: [ok]
