--- a/test/api.test.domain/index.yml
+++ b/test/api.test.domain/index.yml
@@ -389,6 +389,11 @@ paths:
           required: true
           schema:
             type: string
+        - in: query
+          name: from.publishedAt
+          schema:
+            type: integer
+            format: int32
       responses:
         200:
           description: Search Book Result
