--- a/test/api.test.domain/index.yml
+++ b/test/api.test.domain/index.yml
@@ -365,6 +365,21 @@ paths:
     $ref: "#/components/pathItems/IncludeRemoteReference"
   /FullRemoteReference:
     $ref: "./components/pathItems/FullRemoteReference.yml"
+  /i/have/dot:
+    get:
+      operationId: i.have.dot
+      responses:
+        200:
+          description: Get Books
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  books:
+                    type: array
+                    items:
+                      $ref: "./components/schemas/Item.yml"
   /get/reference/items:
     get:
       operationId: getReferenceItems
