--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@himenon/openapi-typescript-code-generator",
   "version": "0.15.0",
   "private": true,
+  "type": "module",
   "description": "OpenAPI Code Generator using TypeScript AST.",
   "keywords": [
     "openapi",
@@ -52,7 +53,7 @@
     "test:eslint": "eslint \"src/**/*.{ts,tsx}\"",
     "test:jest": "jest -c ./jest.config.js",
     "test:snapshot": "jest -c ./jest.snapshot.config.js",
-    "ts": "ts-node -P tsconfig.build.json",
+    "ts": "node --loader ts-node/esm --experimental-specifier-resolution=node",
     "update:snapshot": "yarn test:snapshot --updateSnapshot",
     "validate": "yarn ts ./scripts/validate.ts",
     "watch": "yarn ts ./scripts/watch.ts"
@@ -112,12 +113,12 @@
     "rimraf": "3.0.2",
     "sort-package-json": "1.49.0",
     "ts-jest": "26.5.4",
-    "ts-node": "9.1.1",
-    "typescript": "4.2.3",
+    "ts-node": "10.4.0",
+    "typescript": "4.5.5",
     "yarn-deduplicate": "3.1.0"
   },
   "peerDependencies": {
-    "typescript": "4.2.3"
+    "typescript": "4.5.5"
   },
   "publishConfig": {
     "access": "public"
