--- a/test/infer.domain/index.yml
+++ b/test/infer.domain/index.yml
@@ -37,3 +37,15 @@ components:
       enum: [a, b, c]
     InferAnyNullable:
       nullable: true
+    OptionalPropertiesAndAdditionalProperties:
+      type: object
+      properties:
+        body:
+          type: object
+          properties:
+            key:
+              type: string
+            description:
+              type: string
+          additionalProperties:
+            type: string
