--- a/package.json
+++ b/package.json
@@ -38,24 +38,24 @@
     "package.json"
   ],
   "scripts": {
-    "build": "yarn ts ./scripts/build.ts",
-    "clean": "yarn ts ./scripts/clean.ts",
+    "build": "pnpm ts ./scripts/build.ts",
+    "clean": "pnpm ts ./scripts/clean.ts",
     "format:code": "prettier \"**/*.{js,jsx,ts,tsx,json,yml,yaml,md,html}\" --write",
     "format:code:eslint": "eslint \"**/*.{ts,tsx}\" --fix",
     "format:yarn:lock": "yarn-deduplicate yarn.lock --strategy highest",
     "lerna:version:up": "lerna version --yes",
-    "release:github:registry": "yarn publish --registry https://npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}",
-    "release:npm:registry": "yarn publish",
+    "release:github:registry": "pnpm publish --registry https://npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}",
+    "release:npm:registry": "pnpm publish",
     "test": "run-s test:depcruise test:jest test:code:gen test:snapshot",
-    "test:code:gen": "yarn ts ./scripts/testCodeGen.ts",
+    "test:code:gen": "pnpm ts ./scripts/testCodeGen.ts",
     "test:depcruise": "depcruise --validate .dependency-cruiser.js src",
     "test:eslint": "eslint \"src/**/*.{ts,tsx}\"",
     "test:jest": "jest -c ./jest.config.js",
     "test:snapshot": "jest -c ./jest.snapshot.config.js",
     "ts": "ts-node -P tsconfig.build.json",
-    "update:snapshot": "yarn test:snapshot --updateSnapshot",
-    "validate": "yarn ts ./scripts/validate.ts",
-    "watch": "yarn ts ./scripts/watch.ts"
+    "update:snapshot": "pnpm test:snapshot --updateSnapshot",
+    "validate": "pnpm ts ./scripts/validate.ts",
+    "watch": "pnpm ts ./scripts/watch.ts"
   },
   "husky": {
     "hooks": {
@@ -127,5 +127,10 @@
       "style": "module",
       "parser": "typescript"
     }
+  },
+  {
+    "npm": "forbidden, use pnpm",
+    "pnpm": ">=6",
+    "yarn": "forbidden, use pnpm"
   }
 }
