--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "lerna:version:up": "lerna version --yes",
     "release:github:registry": "pnpm publish --registry https://npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}",
     "release:npm:registry": "pnpm publish",
-    "test": "run-s test:depcruise test:jest test:code:gen test:snapshot",
+    "test": "run-p test:depcruise test:jest test:code:gen test:snapshot",
     "test:code:gen": "pnpm ts ./scripts/testCodeGen.ts",
     "test:depcruise": "depcruise --validate .dependency-cruiser.js src",
     "test:eslint": "eslint \"src/**/*.{ts,tsx}\"",
