--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "typescript": "4.2.3"
   },
   "engines": {
+    "node": ">=16",
     "npm": "forbidden, use pnpm",
     "pnpm": ">=6",
     "yarn": "forbidden, use pnpm"
