--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,33 +8,53 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Setup Git Config
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
+          git config --global user.email "actions@gihub.com"
+          git config --global user.name "gh-actions"
+      - uses: actions/checkout@v3
         with:
           ref: main
-      - uses: actions/setup-node@v1
+      - uses: pnpm/action-setup@v2.1.0
         with:
-          node-version: "12.x"
+          version: 6.32.3
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "16"
           registry-url: https://npm.pkg.github.com
           scope: "@Himenon"
+          cache: "pnpm"
+      - run: pnpm i --frozen-lockfile
       - run: |
-          yarn install --frozen-lockfile
-          yarn build
+          pnpm build
 
   release-github-registry:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Setup Git Config
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
+          git config --global user.email "actions@gihub.com"
+          git config --global user.name "gh-actions"
+      - uses: actions/checkout@v3
         with:
           ref: main
-      - uses: actions/setup-node@v1
+      - uses: pnpm/action-setup@v2.1.0
         with:
-          node-version: "12.x"
+          version: 6.32.3
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "16"
           registry-url: https://npm.pkg.github.com
           scope: "@Himenon"
+          cache: "pnpm"
+      - run: pnpm install
       - run: |
-          yarn install --frozen-lockfile
-          yarn build
-          yarn --cwd ./lib release:github:registry
+          pnpm build
+          pnpm -C ./lib release:github:registry
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -44,12 +64,16 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: main
-      - uses: actions/setup-node@v1
+      - uses: pnpm/action-setup@v2.1.0
         with:
-          node-version: "12.x"
+          version: 6.32.3
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "16.x"
           registry-url: "https://registry.npmjs.org"
-      - run: yarn install --frozen-lockfile
-      - run: yarn build
-      - run: yarn --cwd ./lib release:npm:registry
+          cache: "pnpm"
+      - run: pnpm install
+      - run: pnpm build
+      - run: pnpm -C ./lib release:npm:registry
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
