--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,8 @@ jobs:
       - run: pnpm i --frozen-lockfile
       - run: |
           pnpm build
+        env:
+          CI: true
 
   release-github-registry:
     runs-on: ubuntu-latest
@@ -57,6 +59,7 @@ jobs:
           pnpm -C ./lib release:github:registry
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CI: true
 
   release-npm-registry:
     runs-on: ubuntu-latest
@@ -74,6 +77,8 @@ jobs:
           cache: "pnpm"
       - run: pnpm install
       - run: pnpm build
+        env:
+          CI: true
       - run: pnpm -C ./lib release:npm:registry
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
