test: update sample

--- a/test/api.v2.domain/index.yml
+++ b/test/api.v2.domain/index.yml
@@ -24,7 +24,7 @@ components:
     ReadOnlyParams:
       type: object
       properties:
-        name:
+        readonlyPropertyKey:
           type: string
           readOnly: true
 paths:
