fix: nested property access

--- a/test/json.properties/index.yml
+++ b/test/json.properties/index.yml
@@ -36,3 +36,5 @@ components:
       $ref: "#/components/schemas/Bar/properties/baz"
     Hoge:
       $ref: "#/components/schemas/Bar/properties/bazbaz/properties/hoge"
+    BazBaz:
+      $ref: "#/components/schemas/Bar/properties/bazbaz"
