--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "clean": "pnpm ts ./scripts/clean.ts",
     "format:code": "prettier \"**/*.{js,jsx,ts,tsx,json,yml,yaml,md,html}\" --write",
     "format:code:eslint": "eslint \"**/*.{ts,tsx}\" --fix",
-    "format:yarn:lock": "yarn-deduplicate yarn.lock --strategy highest",
     "lerna:version:up": "lerna version --yes",
     "release:github:registry": "pnpm publish  --no-git-checks --registry https://npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}",
     "release:npm:registry": "pnpm publish --no-git-checks",
@@ -62,51 +61,50 @@
     "node-fetch": "2.6.1"
   },
   "dependencies": {
-    "@himenon/path-oriented-data-structure": "0.1.3",
-    "@types/json-schema": "7.0.7",
-    "ajv": "8.0.5",
-    "dot-prop": "6.0.1",
-    "js-yaml": "4.0.0"
+    "@himenon/path-oriented-data-structure": "0.2.1",
+    "@types/json-schema": "7.0.11",
+    "ajv": "8.11.2",
+    "dot-prop": "7.2.0",
+    "js-yaml": "4.1.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "12.1.1",
-    "@commitlint/config-conventional": "12.1.1",
-    "@swc/core": "^1.2.173",
-    "@swc/helpers": "^0.3.8",
-    "@swc/jest": "^0.2.20",
+    "@commitlint/cli": "17.3.0",
+    "@commitlint/config-conventional": "17.3.0",
+    "@swc/core": "^1.3.24",
+    "@swc/helpers": "^0.4.14",
+    "@swc/jest": "^0.2.24",
     "@types/chokidar": "2.1.3",
-    "@types/jest": "26.0.22",
-    "@types/js-yaml": "4.0.0",
-    "@types/node": "14.14.37",
-    "@types/rimraf": "3.0.0",
-    "@typescript-eslint/eslint-plugin": "4.20.0",
-    "@typescript-eslint/parser": "4.20.0",
-    "chokidar": "3.5.1",
+    "@types/jest": "29.2.5",
+    "@types/js-yaml": "4.0.5",
+    "@types/node": "18.11.18",
+    "@types/rimraf": "3.0.2",
+    "@typescript-eslint/eslint-plugin": "5.48.0",
+    "@typescript-eslint/parser": "5.48.0",
+    "chokidar": "3.5.3",
     "conventional-changelog-angular-all": "1.7.0",
-    "cpy": "8.1.2",
-    "dependency-cruiser": "9.24.0",
-    "eslint": "7.23.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-import": "2.22.1",
-    "execa": "5.0.0",
+    "cpy": "9.0.1",
+    "dependency-cruiser": "12.3.0",
+    "eslint": "8.31.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-import": "2.26.0",
+    "execa": "6.1.0",
     "generate-changelog": "1.8.0",
     "import-sort-style-module": "6.0.0",
-    "jest": "26.6.3",
-    "jest-cli": "26.6.3",
-    "lerna": "4.0.0",
-    "lint-staged": "10.5.4",
+    "jest": "29.3.1",
+    "jest-cli": "29.3.1",
+    "lerna": "6.3.0",
+    "lint-staged": "13.1.0",
     "npm-run-all": "4.1.5",
-    "openapi-schema-validator": "7.2.3",
-    "prettier": "2.2.1",
-    "prettier-plugin-import-sort": "0.0.6",
-    "read-pkg-up": "^7.0.1",
+    "openapi-schema-validator": "12.1.0",
+    "prettier": "2.8.1",
+    "prettier-plugin-import-sort": "0.0.7",
+    "read-pkg-up": "^9.1.0",
     "rimraf": "3.0.2",
-    "simple-git-hooks": "^2.7.0",
-    "sort-package-json": "1.49.0",
-    "ts-jest": "26.5.4",
-    "ts-node": "9.1.1",
-    "typescript": "4.2.3",
-    "yarn-deduplicate": "3.1.0"
+    "simple-git-hooks": "^2.8.1",
+    "sort-package-json": "2.1.0",
+    "ts-jest": "29.0.3",
+    "ts-node": "10.9.1",
+    "typescript": "4.9.4"
   },
   "engines": {
     "pnpm": ">=6"
