--- a/package.json
+++ b/package.json
@@ -87,9 +87,11 @@
     "conventional-changelog-angular-all": "1.7.0",
     "cpy": "8.1.2",
     "dependency-cruiser": "12.3.0",
-    "eslint": "8.31.0",
+    "eslint": "8.34.0",
     "eslint-config-prettier": "8.6.0",
-    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "execa": "5.0.0",
     "generate-changelog": "1.8.0",
     "import-sort-style-module": "6.0.0",
