--- a/package.json
+++ b/package.json
@@ -46,8 +46,9 @@
     "release:github:registry": "pnpm publish  --no-git-checks --registry https://npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}",
     "release:npm:registry": "pnpm publish --no-git-checks",
     "test": "run-p test:depcruise test:jest test:code:gen test:snapshot",
-    "test:code:gen": "pnpm ts ./scripts/testCodeGen.ts",
-    "test:code:gen2": "pnpm ts ./scripts/testCodeGenWithFunctional.ts",
+    "test:code:gen": "run-p test:code:gen:*",
+    "test:code:gen:class": "pnpm ts ./scripts/testCodeGenWithClass.ts",
+    "test:code:gen:function": "pnpm ts ./scripts/testCodeGenWithFunctional.ts",
     "test:depcruise": "depcruise --validate .dependency-cruiser.js src",
     "test:eslint": "eslint \"src/**/*.{ts,tsx}\"",
     "test:jest": "jest -c ./jest.config.js --collect-coverage",
