--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "lerna:version:up": "lerna version --yes",
     "release:github:registry": "pnpm publish  --no-git-checks --registry https://npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}",
     "release:npm:registry": "pnpm publish --no-git-checks",
-    "test": "run-p test:depcruise test:jest test:code:gen test:snapshot",
+    "test": "run-p test:depcruise test:jest test:code:gen:* test:snapshot",
     "test:code:gen": "run-p test:code:gen:*",
     "test:code:gen:class": "pnpm ts ./scripts/testCodeGenWithClass.ts",
     "test:code:gen:function": "pnpm ts ./scripts/testCodeGenWithFunctional.ts",
