--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "scripts": {
     "build": "pnpm ts ./scripts/build.ts",
     "clean": "pnpm ts ./scripts/clean.ts",
+    "format": "run-s format:code format:code:eslint",
     "format:code": "prettier \"**/*.{js,jsx,ts,tsx,json,yml,yaml,md,html}\" --write",
     "format:code:eslint": "eslint \"**/*.{ts,tsx}\" --fix",
     "lerna:version:up": "lerna version --yes",
