--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,7 @@ jobs:
       - name: Test & Build
         run: |
           pnpm build
+          pnpm test:code:gen
           pnpm test
         env:
           CI: true
