--- a/test/ref.access/index.yml
+++ b/test/ref.access/index.yml
@@ -122,3 +122,69 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Publisher"
+  /create/publisher/{id}:
+    post:
+      operationId: createPublisher
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                color:
+                  type: array
+                  items:
+                    type: string
+            encoding:
+              color:
+                style: form
+                explode: false
+      responses:
+        200:
+          description: Get Publisher
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+  /create/v2/publisher/{id}:
+    post:
+      operationId: createPublisherV2
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                color:
+                  type: array
+                  items:
+                    type: string
+            encoding:
+              color:
+                style: form
+                explode: false
+          application/json:
+            schema:
+              type: object
+              properties:
+                color:
+                  type: array
+                  items:
+                    type: string
+            encoding:
+              color:
+                style: form
+                explode: false
+      responses:
+        200:
+          description: Create Publisher V2
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
