fix: separated strings are not restored correctly (#112)

--- a/test/ref.access/index.yml
+++ b/test/ref.access/index.yml
@@ -188,3 +188,29 @@ paths:
                 properties:
                   status:
                     type: string
+
+  /author/author-{authorId}.a.{bookId}.b/book/{bookId}.json:
+    parameters:
+      - name: authorId
+        in: path
+        required: true
+        description: Author ID
+        schema:
+          type: string
+          format: uuid
+      - name: bookId
+        in: path
+        required: true
+        description: Book ID
+        schema:
+          type: string
+          format: uuid
+    get:
+      operationId: getBookById
+      responses:
+        200:
+          description: Get Books
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Book"
