--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
           version: 8.10.5
       - uses: actions/setup-node@v2
         with:
-          node-version: "20"
+          node-version: "20.x"
           registry-url: https://npm.pkg.github.com
           scope: "@Himenon"
           cache: "pnpm"
@@ -49,7 +49,7 @@ jobs:
           version: 8.10.5
       - uses: actions/setup-node@v2
         with:
-          node-version: "20"
+          node-version: "20.x"
           registry-url: https://npm.pkg.github.com
           scope: "@Himenon"
           cache: "pnpm"
