--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "openapi-schema-validator": "12.1.3",
     "prettier": "3.2.4",
     "prettier-plugin-import-sort": "0.0.7",
-    "read-pkg-up": "^10.1.0",
+    "read-package-up": "^11.0.0",
     "rimraf": "5.0.5",
     "simple-git-hooks": "^2.9.0",
     "sort-package-json": "2.7.0",
