--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "url": "https://github.com/Himenon"
   },
   "sideEffects": false,
+  "type": "module",
   "main": "lib/$cjs/index.js",
   "module": "lib/$esm/index.js",
   "browser": "lib/$esm/index.js",
@@ -55,7 +56,7 @@
     "test:eslint": "eslint \"src/**/*.{ts,tsx}\"",
     "test:jest": "jest -c ./jest.config.js --collect-coverage",
     "test:snapshot": "jest -c ./jest.snapshot.config.js",
-    "ts": "ts-node -P tsconfig.build.json",
+    "ts": "node --loader ts-node/esm --experimental-specifier-resolution=node",
     "update:snapshot": "pnpm jest -c ./jest.snapshot.config.js --updateSnapshot",
     "watch": "pnpm ts ./scripts/watch.ts",
     "validate": "pnpm ts ./scripts/validate.ts"
