--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "package.json"
   ],
   "scripts": {
-    "build": "pnpm ts ./scripts/build.ts",
+    "build": "tsc -b tsconfig.json",
     "clean": "pnpm ts ./scripts/clean.ts",
     "format": "run-s format:code format:code:eslint",
     "format:code": "prettier \"**/*.{js,jsx,ts,tsx,json,yml,yaml,md,html}\" --write",
