--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,5 +1,8 @@
 {
   "extends": "./tsconfig",
+  "compilerOptions": {
+    "rootDir": "src"
+  },
   "include": ["src"],
   "exclude": ["node_modules", "./src/**/__tests__/*", "scripts"]
 }
