--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "test:code:gen:class": "pnpm ts ./scripts/testCodeGenWithClass.ts",
     "test:code:gen:function": "pnpm ts ./scripts/testCodeGenWithFunctional.ts",
     "test:code:gen:currying-function": "pnpm ts ./scripts/testCodeGenWithCurryingFunctional.ts",
-    "test:depcruise": "depcruise --validate .dependency-cruiser.js src",
+    "test:depcruise": "depcruise --validate .dependency-cruiser.cjs src",
     "test:eslint": "eslint \"src/**/*.{ts,tsx}\"",
     "test:jest": "jest -c ./jest.config.cjs --collect-coverage",
     "test:snapshot": "jest -c ./jest.snapshot.config.cjs",
