--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "test:code:gen:currying-function": "pnpm ts ./scripts/testCodeGenWithCurryingFunctional.ts",
     "test:depcruise": "depcruise --validate .dependency-cruiser.cjs src",
     "test:eslint": "eslint \"src/**/*.{ts,tsx}\"",
-    "test:jest": "jest -c ./jest.config.cjs --collect-coverage",
+    "test:jest": "NODE_OPTIONS=--experimental-vm-modules jest -c ./jest.config.cjs --collect-coverage",
     "test:snapshot": "jest -c ./jest.snapshot.config.cjs",
     "ts": "node --loader ts-node/esm --experimental-specifier-resolution=node",
     "update:snapshot": "pnpm jest -c ./jest.snapshot.config.cjs --updateSnapshot",
