--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,6 +3,10 @@
   "compilerOptions": {
     "rootDir": "src"
   },
+  "ts-node": {
+    "esm": true,
+    "swc": true
+  },
   "include": ["src"],
   "exclude": ["node_modules", "./src/**/__tests__/*", "scripts"]
 }
